--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ module = [
     "tf2_ros.*",
     "vicon_dssdk",
     "vicon_transformer.vicon_transformer_bindings",
-    "vicon_transformer.pam_vicon_o80",
+    "vicon_transformer.pam_vicon",
     "zmq",
 ]
 ignore_missing_imports = true
