--- a/.github/workflows/build_pr.yml
+++ b/.github/workflows/build_pr.yml
@@ -27,5 +27,8 @@ jobs:
       - name: Build
         uses: open-dynamic-robot-initiative/trifinger-build-action/build@v2
 
+      - name: list install dir
+        run: |
+          tree install
       - name: Tests
         uses: open-dynamic-robot-initiative/trifinger-build-action/run_tests@v2
