--- a/.github/workflows/build_pr.yml
+++ b/.github/workflows/build_pr.yml
@@ -37,7 +37,7 @@ jobs:
           pkg_name=${GITHUB_REPOSITORY#*/}
           echo apptainer run container.sif bcat -o ${{ inputs.build_dir }} -p . --python-dir install/${pkg_name}/lib/python3.8/site-packages/${pkg_name}
   
-          apptainer run ${{ inputs.container }} bcat -o ${{ inputs.build_dir }} -p . --python-dir install/${pkg_name}/lib/python3.8/site-packages/${pkg_name}
+          apptainer run container.sif bcat -o ${{ inputs.build_dir }} -p . --python-dir install/${pkg_name}/lib/python3.8/site-packages/${pkg_name}
   
       - name: Upload documentation artifact
         uses: actions/upload-pages-artifact@v1
