--- a/.github/workflows/build_pr.yml
+++ b/.github/workflows/build_pr.yml
@@ -35,14 +35,14 @@ jobs:
         shell: bash
         run: |
           pkg_name=${GITHUB_REPOSITORY#*/}
-          echo apptainer run container.sif bcat -o ${{ inputs.build_dir }} -p . --python-dir install/${pkg_name}/lib/python3.8/site-packages/${pkg_name}
+          echo apptainer run container.sif bcat -o docbuild -p . --python-dir install/${pkg_name}/lib/python3.8/site-packages/${pkg_name}
   
-          apptainer run container.sif bcat -o ${{ inputs.build_dir }} -p . --python-dir install/${pkg_name}/lib/python3.8/site-packages/${pkg_name}
+          apptainer run container.sif bcat -o docbuild -p . --python-dir install/${pkg_name}/lib/python3.8/site-packages/${pkg_name}
   
       - name: Upload documentation artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: ${{ inputs.build_dir }}/html
+          path: docbuild/html
 
       - name: Tests
         uses: open-dynamic-robot-initiative/trifinger-build-action/run_tests@v2
