--- a/.github/workflows/build_master.yml
+++ b/.github/workflows/build_master.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Documentation
         id: doc
-        uses: open-dynamic-robot-initiative/trifinger-build-action/build_and_deploy_docs@v2
+        uses: open-dynamic-robot-initiative/trifinger-build-action/build_and_deploy_docs@master
 
       - name: Tests
         uses: open-dynamic-robot-initiative/trifinger-build-action/run_tests@v2
