--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ convention = "google"
 "__init__.py" = ["F401"]  # unused imports
 "tests/*" = ["D", "ANN", "PLR2004"]
 "scripts/*" = ["D"]
+"examples/*" = ["D"]
 
 
 [[tool.mypy.overrides]]
